<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/margin_16"
            tools:context=".view.activity.dashboard.DashboardActivity">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:cardCornerRadius="@dimen/_200"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/ivUserProfile"
                    android:layout_width="@dimen/_120"
                    android:layout_height="@dimen/_120"
                    android:background="@drawable/ic_launcher_background" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16"
                android:text="@string/lbl_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4"
                android:clickable="false"
                android:focusable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16"
                android:text="@string/lbl_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4"
                android:clickable="false"
                android:focusable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16"
                android:text="@string/lbl_age" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAge"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4"
                android:clickable="false"
                android:focusable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16"
                android:text="@string/lbl_address" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAddress"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4"
                android:clickable="false"
                android:focusable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16"
                android:text="@string/lbl_phone_number" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhoneNumber"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4"
                android:clickable="false"
                android:focusable="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRefresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="16dp"
                android:paddingVertical="14dp"
                android:text="@string/lbl_refresh"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/purple_500"
                app:cornerRadius="16dp"
                app:elevation="6dp"
                app:icon="@drawable/ic_baseline_refresh_24"
                app:iconGravity="textStart"
                app:iconPadding="12dp"
                app:iconTint="@android:color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</layout>